--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "jro-client",
-  "version": "0.0.0",
+  "name": "verify-client",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,15 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.2",
+    "@angular/animations": "^8.1.2",
+    "@angular/cdk": "^8.1.1",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
+    "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "~8.1.2",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "rxjs": "~6.4.0",
+    "font-awesome": "^4.7.0",
+    "primeflex": "^1.0.0-rc.1",
+    "primeicons": "^2.0.0",
+    "primeng": "^8.0.2",
+    "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
